--- a/src/stylesheets/variables/colors.scss
+++ b/src/stylesheets/variables/colors.scss
@@ -1,3 +1,6 @@
+//Black Tonalities
+$night: hsl(210, 6%, 6%);
+
 //Pink Tonalities
 $blush: hsl(346, 77%, 61%);
 
@@ -14,11 +17,13 @@ $veronica: hsl(282, 83%, 52%);
 $blue-violet: hsl(274, 91%, 59%);
 
 //Gray Tonalities
+$gunmetal: hsl(210, 12%, 16%);
 $glaucous: hsl(224, 20%, 49%);
 $periwinkle: hsl(230, 100%, 91%);
 $ultra-violet: hsl(231, 25%, 52%);
 
 //White Tonalities
+$seasalt: hsl(0, 0%, 98%);
 $white: hsl(0, 100%, 100%);
 $lavender: hsl(230, 86%, 97%);
 $ghost-white: hsl(231, 100%, 97%);
