feat: introduce navbar for managing user authentication and profile information

--- a/src/components/Sidebar/MobileMenu/MobileMenu.module.scss
+++ b/src/components/Sidebar/MobileMenu/MobileMenu.module.scss
@@ -25,13 +25,13 @@
   width: 100%;
   display: flex;
   top: 4.875rem;
-  height: 100vh;
   position: fixed;
   max-width: 16.938rem;
   padding-block: 1.5rem;
   flex-direction: column;
   padding-inline: 1.5rem;
   transform: translateX(100%);
+  height: calc(100vh - 4.875rem);
   transition: transform var.$ease200ms;
   background-color: var.$antiflash-white;
 }
