--- a/src/stylesheets/variables/utilities.scss
+++ b/src/stylesheets/variables/utilities.scss
@@ -2,6 +2,8 @@
 
 //Transitions
 $ease200ms: ease 200ms;
+$ease500ms: ease 500ms;
+$ms800: 800ms;
 
 //Media Queries Breakpoints
 $breakpoint-1600: 1600px;
