--- a/src/stylesheets/variables/utilities.scss
+++ b/src/stylesheets/variables/utilities.scss
@@ -15,6 +15,7 @@ $breakpoint-762: 762px;
 $padding-24: 1.5rem;
 $padding-40: 2.5rem;
 $padding-56: 3.5rem;
+$padding-94: 5.875rem;
 $padding-113: 7.063rem;
 $padding-116: 7.25rem;
 $padding-129: 8.06rem;
