style: adjust top margin in CreateFeedback page

--- a/src/components/CreateFeedback/CreateFeedback.module.scss
+++ b/src/components/CreateFeedback/CreateFeedback.module.scss
@@ -6,9 +6,9 @@
   gap: 4.25rem;
   display: flex;
   max-width: 33.75rem;
+  margin-top: 2.125rem;
   margin-inline: 1.5rem;
   flex-direction: column;
-  justify-content: center;
 }
 
 .form {
