--- a/src/components/CreateFeedback/CreateFeedback.module.scss
+++ b/src/components/CreateFeedback/CreateFeedback.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   gap: 4.25rem;
   display: flex;
-  margin-top: 4rem;
+  margin-block: 4rem;
   max-width: 33.75rem;
   margin-inline: 1.5rem;
   flex-direction: column;
@@ -189,7 +189,7 @@
 @media (width <= var.$breakpoint-762) {
   .container {
     gap: 3.438rem;
-    margin-top: 2.125rem;
+    margin-block: 3.125rem;
   }
 
   .form {
