--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -4,9 +4,9 @@
 .container {
   gap: 4.25rem;
   display: flex;
+  margin-block: 4rem;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
 }
 
 .wrapper {
@@ -100,6 +100,7 @@
 @media (width <= var.$breakpoint-762) {
   .container {
     margin-inline: 2rem;
+    margin-block: 3.125rem;
   }
 
   .wrapper {
