--- a/src/stylesheets/variables/colors.scss
+++ b/src/stylesheets/variables/colors.scss
@@ -41,7 +41,9 @@ $cornflower-blue: hsl(230, 91%, 73%);
 //Transparent Colors
 $transparent-black-50: hsla(0, 0%, 0%, 50%);
 $transparent-white-75: hsla(231, 87%, 97%, 75%);
+$transparent-glaucous-10: hsla(224, 20%, 49%, 10%);
 $transparent-lavender-75: hsla(230, 86%, 97%, 75%);
+$transparent-cool-gray-25: hsla(231, 20%, 63%, 25%);
 $transparent-savoy-blue-25: hsla(230, 76%, 59%, 25%);
 $transparent-delft-blue-35: hsla(230, 31%, 31%, 35%);
 $transparent-marian-blue-50: hsla(231, 33%, 34%, 50%);
