feat: add roadmap page

--- a/src/stylesheets/variables/colors.scss
+++ b/src/stylesheets/variables/colors.scss
@@ -27,6 +27,7 @@ $seasalt: hsl(0, 0%, 98%);
 $white: hsl(0, 100%, 100%);
 $lavender: hsl(230, 86%, 97%);
 $ghost-white: hsl(231, 100%, 97%);
+$lavender-web: hsl(231, 49%, 87%);
 $antiflash-white: hsl(230, 60%, 98%);
 
 //Blue Tonalities
