style: enhance SidebarHeading mobile layout

--- a/src/components/Sidebar/SidebarHeading/SidebarHeading.module.scss
+++ b/src/components/Sidebar/SidebarHeading/SidebarHeading.module.scss
@@ -54,6 +54,10 @@
     background-image: url('/assets/backgrounds/background-header-mobile.png');
   }
 
+  .headingWrapper {
+    gap: initial;
+  }
+
   .heading {
     font-size: var.$font-15;
   }
